#21: add pagination and filtering for movies in backend
