# openapi.yaml
@@ -33,32 +33,10 @@ paths:
       operationId: getMovies
       parameters: # TODO Define search parameters
         - in: query
-          name: offset
-          description: Used for pagination. The number of items to skip before starting to collect the result set.
+          name: searchMoviePagingDto
           schema:
-            type: integer
-        - in: query
-          name: limit
-          description: Used for pagination. The number of items to return.
-          schema:
-            type: integer
-        - in: query
-          name: originalTitle
-          schema:
-            type: string
-        - in: query
-          name: englishTitle
-          schema:
-            type: string
-        - in: query
-          name: duration
-          schema:
-            type: integer
-            format: int32
-        - in: query
-          name: hasDialog
-          schema:
-            type: boolean
+            type: object
+          description: All properties of searchMoviePagingDto are valid parameters see specifaction for details. The searchstring parameter disables all detailed field search parameters.
       responses:
         200:
           description: successful operation
@@ -229,6 +207,101 @@ components:
         - contact
       type: object
       properties:
+        originalTitle:
+          type: string
+        englishTitle:
+          type: string
+        movieFile:
+          type: string
+        previewFile:
+          type: string
+        trailerFile:
+          type: string
+        stillFiles:
+          type: array
+          items:
+            type: string
+        subtitleFiles:
+          type: array
+          items:
+            type: string
+        directors:
+          type: array
+          items:
+            type: string # TODO change to director type
+        countriesOfProduction:
+          type: array
+          items:
+            type: string # TODO change to tag type
+        yearOfProduction:
+          type: integer
+          format: int32
+        duration:
+          type: integer
+          format: int32
+          description: Duration in minutes
+        animationTechniques:
+          type: array
+          items:
+            type: string # TODO change to tag type
+        softwareUsed:
+          type: array
+          items:
+            type: string # TODO change to tag type
+        keywords:
+          type: array
+          items:
+            type: string # TODO change to tag type
+        germanSynopsis:
+          type: string
+        englishSynopsis:
+          type: string
+        submissionCategory:
+          type: string # TODO change to tag type
+        hasDialog:
+          type: boolean
+        dialogLanguages:
+          type: array
+          items:
+            type: string # TODO change to tag type
+        hasSubtitles:
+          type: boolean
+        isStudentFilm:
+          type: boolean
+        filmSchool:
+          type: string
+        script:
+          type: string
+        animation:
+          type: string
+        editing:
+          type: string
+        sound:
+          type: string
+        music:
+          type: string
+        productionCompany:
+          type: string
+        contact:
+          type: string # TODO change to contact type
+    SearchMoviePagingDto:
+      type: object
+      properties:
+          page:
+             description: Used for pagination. The number of the page to return.
+             type: integer
+          limit:
+            description: Used for pagination. The number of items to return.
+            type: integer
+          sortOrder:
+            description: Used for pagination. The number of items to return.
+            type: string
+          orderBy:
+            description: Used for pagination. The number of items to return.
+            type: string
+        searchstring:
+          description: Searches all string fields containing the searchstring and returns every match. If specified, detailed search fields are ignored.
+          type: string
         originalTitle:
           type: string
         englishTitle:
